--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,32 @@
 </head>
 
 <body>
-    <h3>Welcome APIs</h3>
+    <div class="container-fluid p-0">
+        <div class="container">
+            <div class="alert alert-success">
+                <h2 class="text-center">Crud using nodejs and express with mongodb</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <form action="" method="post">
+                        <div class="form-row">
+                            <div class="col-md-6 form-group">
+                                <label for="username">Username</label>
+                                <input type="text" name="username" id="username" value="" placeholder="Username"
+                                    class="form-control">
+                            </div>
+                            <div class="col-md-6 form-group">
+                                <label for="fullname">fullname</label>
+                                <input type="text" name="fullname" id="fullname" value="" placeholder="fullname"
+                                    class="form-control">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-6"></div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
