--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,11 @@
                                 <input type="text" name="fullname" id="fullname" value="" placeholder="fullname"
                                     class="form-control">
                             </div>
+                            <div class="col-md-6 form-group">
+                                <label for="email">fullname</label>
+                                <input type="email" name="email" id="email" value="" placeholder="email"
+                                    class="form-control">
+                            </div>
                         </div>
                     </form>
                 </div>
