--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
                                     class="form-control">
                             </div>
                             <div class="col-md-6 form-group">
-                                <label for="email">fullname</label>
+                                <label for="email">Email</label>
                                 <input type="email" name="email" id="email" value="" placeholder="email"
                                     class="form-control">
                             </div>
