--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,16 @@
                                 <input type="email" name="email" id="email" value="" placeholder="email"
                                     class="form-control">
                             </div>
+                            <div class="col-md-6 form-group">
+                                <label for="pass">Password</label>
+                                <input type="password" name="password" id="pass" value="" placeholder="Password"
+                                    class="form-control">
+                            </div>
+                            <div class="col-md-6 form-group">
+                                <label for="pass2">Confirm Password</label>
+                                <input type="password" name="password2" id="pass2" value="" placeholder="Password"
+                                    class="form-control">
+                            </div>
                         </div>
                     </form>
                 </div>
