The crud fornt-end is ready

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,9 +46,38 @@
                                     class="form-control">
                             </div>
                         </div>
+                        <div class="form-group">
+                            <button class="btn btn-sm btn-success">Register</button>
+                        </div>
                     </form>
                 </div>
-                <div class="col-md-6"></div>
+                <div class="col-md-6">
+                    <table class="table table-sm table-responsive-sm table-striped">
+                        <thead>
+                            <tr>
+                                <th>Username</th>
+                                <th>Fullname</th>
+                                <th>Email</th>
+                                <th>Password</th>
+                                <th>Events</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Ghost</td>
+                                <td>Ghost Racine sniper</td>
+                                <td>gho@gmail.com</td>
+                                <td>.1234</td>
+                                <td>
+                                    <div class="btn-group btn-sm-responsive">
+                                        <a href="/edit/?id" class="btn btn-sm btn-info">edit</a>
+                                        <a href="/edit/?id" class="btn btn-sm btn-danger">delete</a>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
