New commit for the changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-
+    <link rel="shortcut icon" href="https://avatars.githubusercontent.com/u/58594917?v=4" type="image/x-icon">
     <title>Try</title>
 </head>
 
@@ -17,7 +17,7 @@
                 <h2 class="text-center">Crud using nodejs and express with mongodb</h2>
             </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <form action="" method="post">
                         <div class="form-row">
                             <div class="col-md-6 form-group">
@@ -30,7 +30,7 @@
                                 <input type="text" name="fullname" id="fullname" value="" placeholder="fullname"
                                     class="form-control">
                             </div>
-                            <div class="col-md-6 form-group">
+                            <div class="col-md-12 form-group">
                                 <label for="email">Email</label>
                                 <input type="email" name="email" id="email" value="" placeholder="email"
                                     class="form-control">
@@ -51,7 +51,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-8">
                     <table class="table table-sm table-responsive-sm table-striped">
                         <thead>
                             <tr>
