--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,6 +52,10 @@
                     </form>
                 </div>
                 <div class="col-md-8">
+                    <form action="" method="get" class="inline-group">
+                        <input type="search" name="search" id="search" placeholder="Search..."
+                            class="my-2 form-control">
+                    </form>
                     <table class="table table-sm table-responsive-sm table-striped">
                         <thead>
                             <tr>
