From inito alert danger

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,10 +52,12 @@
                     </form>
                 </div>
                 <div class="col-md-8">
-                    <form action="" method="get" class="inline-group">
-                        <input type="search" name="search" id="search" placeholder="Search..."
-                            class="my-2 form-control">
-                    </form>
+                    <div class="alert alert-danger">
+                        <form action="" method="get" class="inline-group">
+                            <input type="search" name="search" id="search" placeholder="Search..."
+                                class="my-2 form-control">
+                        </form>
+                    </div>
                     <table class="table table-sm table-responsive-sm table-striped">
                         <thead>
                             <tr>
