Type of the button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,38 +18,40 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <form action="" method="post">
-                        <div class="form-row">
-                            <div class="col-md-6 form-group">
-                                <label for="username">Username</label>
-                                <input type="text" name="username" id="username" value="" placeholder="Username"
-                                    class="form-control">
+                    <div class="card card-body">
+                        <form action="" method="post">
+                            <div class="form-row">
+                                <div class="col-md-6 form-group">
+                                    <label for="username">Username</label>
+                                    <input type="text" name="username" id="username" value="" placeholder="Username"
+                                        class="form-control">
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label for="fullname">fullname</label>
+                                    <input type="text" name="fullname" id="fullname" value="" placeholder="fullname"
+                                        class="form-control">
+                                </div>
+                                <div class="col-md-12 form-group">
+                                    <label for="email">Email</label>
+                                    <input type="email" name="email" id="email" value="" placeholder="email"
+                                        class="form-control">
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label for="pass">Password</label>
+                                    <input type="password" name="password" id="pass" value="" placeholder="Password"
+                                        class="form-control">
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <label for="pass2">Confirm Password</label>
+                                    <input type="password" name="password2" id="pass2" value="" placeholder="Password"
+                                        class="form-control">
+                                </div>
                             </div>
-                            <div class="col-md-6 form-group">
-                                <label for="fullname">fullname</label>
-                                <input type="text" name="fullname" id="fullname" value="" placeholder="fullname"
-                                    class="form-control">
+                            <div class="form-group">
+                                <button type="button" class="btn btn-sm btn-success">Register</button>
                             </div>
-                            <div class="col-md-12 form-group">
-                                <label for="email">Email</label>
-                                <input type="email" name="email" id="email" value="" placeholder="email"
-                                    class="form-control">
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <label for="pass">Password</label>
-                                <input type="password" name="password" id="pass" value="" placeholder="Password"
-                                    class="form-control">
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <label for="pass2">Confirm Password</label>
-                                <input type="password" name="password2" id="pass2" value="" placeholder="Password"
-                                    class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <button class="btn btn-sm btn-success">Register</button>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
                 <div class="col-md-8">
                     <div class="alert alert-danger">
