--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,8 +78,8 @@
                                 <td>.1234</td>
                                 <td>
                                     <div class="btn-group btn-sm-responsive">
-                                        <a href="/edit/:id" class="btn btn-sm btn-info">edit</a>
-                                        <a href="/edit/:id" class="btn btn-sm btn-danger">delete</a>
+                                        <a href="/edit" class="btn btn-sm btn-info">edit</a>
+                                        <a href="/delete" class="btn btn-sm btn-danger">delete</a>
                                     </div>
                                 </td>
                             </tr>
@@ -90,8 +90,8 @@
                                 <td>.1234</td>
                                 <td>
                                     <div class="btn-group btn-sm-responsive">
-                                        <a href="/edit/:id" class="btn btn-sm btn-info">edit</a>
-                                        <a href="/edit/:id" class="btn btn-sm btn-danger">delete</a>
+                                        <a href="/edit" class="btn btn-sm btn-info">edit</a>
+                                        <a href="/delete" class="btn btn-sm btn-danger">delete</a>
                                     </div>
                                 </td>
                             </tr>
