--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -14,10 +14,12 @@
     <div class="container-fluid p-0">
         <div class="container">
             <div class="mt-2 alert alert-success">
-                <h2 class="text-center">Crud using nodejs and express with mongodb</h2>
+                <h3 class="text-center">
+                    <a href="/" class="btn btn-link">Home</a>/<%= title %>
+                </h3>
             </div>
-            <div class="row">
-                <div class="col-md-4">
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-sm-12">
                     <div class="card card-body">
                         <form action="" method="post">
                             <div class="form-row">
@@ -48,55 +50,10 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <button type="button" class="btn btn-sm btn-success">Register</button>
+                                <button type="button" class="btn btn-sm btn-warning">Update</button>
                             </div>
                         </form>
                     </div>
-                </div>
-                <div class="col-md-8">
-                    <div class="alert alert-danger">
-                        <form action="" method="get" class="inline-group">
-                            <input type="search" name="search" spellcheck="false" id="search" placeholder="Search..."
-                                class="my-2 form-control">
-                        </form>
-                    </div>
-                    <table class="table table-sm table-responsive-sm table-striped">
-                        <thead>
-                            <tr>
-                                <th>Username</th>
-                                <th>Fullname</th>
-                                <th>Email</th>
-                                <th>Password</th>
-                                <th>Events</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Ghost</td>
-                                <td>Ghost Racine sniper</td>
-                                <td>gho@gmail.com</td>
-                                <td>.1234</td>
-                                <td>
-                                    <div class="btn-group btn-sm-responsive">
-                                        <a href="/edit/:id" class="btn btn-sm btn-info">edit</a>
-                                        <a href="/edit/:id" class="btn btn-sm btn-danger">delete</a>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Ghost&é</td>
-                                <td> sniper</td>
-                                <td>ghostart@gmail.com</td>
-                                <td>.1234</td>
-                                <td>
-                                    <div class="btn-group btn-sm-responsive">
-                                        <a href="/edit/:id" class="btn btn-sm btn-info">edit</a>
-                                        <a href="/edit/:id" class="btn btn-sm btn-danger">delete</a>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
                 </div>
             </div>
         </div>
