Card form the register

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,43 +60,45 @@
                                 class="my-2 form-control">
                         </form>
                     </div>
-                    <table class="table table-sm table-responsive-sm table-striped">
-                        <thead>
-                            <tr>
-                                <th>Username</th>
-                                <th>Fullname</th>
-                                <th>Email</th>
-                                <th>Password</th>
-                                <th>Events</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Ghost</td>
-                                <td>Ghost Racine sniper</td>
-                                <td>gho@gmail.com</td>
-                                <td>.1234</td>
-                                <td>
-                                    <div class="btn-group btn-sm-responsive">
-                                        <a href="/edit" class="btn btn-sm btn-info">edit</a>
-                                        <a href="/delete" class="btn btn-sm btn-danger">delete</a>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Ghost&é</td>
-                                <td> sniper</td>
-                                <td>ghostart@gmail.com</td>
-                                <td>.1234</td>
-                                <td>
-                                    <div class="btn-group btn-sm-responsive">
-                                        <a href="/edit" class="btn btn-sm btn-info">edit</a>
-                                        <a href="/delete" class="btn btn-sm btn-danger">delete</a>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="card card-body">
+                        <table class="table table-sm table-responsive-sm table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Username</th>
+                                    <th>Fullname</th>
+                                    <th>Email</th>
+                                    <th>Password</th>
+                                    <th>Events</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Ghost</td>
+                                    <td>Ghost Racine sniper</td>
+                                    <td>gho@gmail.com</td>
+                                    <td>.1234</td>
+                                    <td>
+                                        <div class="btn-group btn-sm-responsive">
+                                            <a href="/edit" class="btn btn-sm btn-info">edit</a>
+                                            <a href="/delete" class="btn btn-sm btn-danger">delete</a>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Ghost&é</td>
+                                    <td> sniper</td>
+                                    <td>ghostart@gmail.com</td>
+                                    <td>.1234</td>
+                                    <td>
+                                        <div class="btn-group btn-sm-responsive">
+                                            <a href="/edit" class="btn btn-sm btn-info">edit</a>
+                                            <a href="/delete" class="btn btn-sm btn-danger">delete</a>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
