--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include './includes/header' %>
+<%- include ('./includes/header') %>
     <div class="container-fluid p-0">
         <div class="container">
             <div class="mt-2 alert alert-success">
