--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card card-body">
-                        <form action="" method="post">
+                        <form action="/add" method="post">
                             <div class="form-row">
                                 <div class="col-md-6 form-group">
                                     <label for="username">Username</label>
@@ -36,7 +36,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <button type="button" class="btn btn-sm btn-success">Register</button>
+                                <button type="submit" class="btn btn-sm btn-success">Register</button>
                             </div>
                         </form>
                     </div>
