Get user using he _id

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,6 +112,7 @@
                                 </div>
                                 <div class="card-body">
                                     <p><b>Email: </b> ${user.email}</p>
+                                    <a href="edit/?${user._id}" class="btn btn-sm btn-warning">Ready more</a>
                                 </div>
                                 </div>
                             </div>
