--- a/style.css
+++ b/style.css
@@ -17,5 +17,33 @@ aside{
 }
 main{
     position: relative;
-    width: 
+    width: 80%;
+    background-color: #456;
+}
+
+.content{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #456;
+    width: 100%;
+    height: 100%;
+}
+.modal{
+    border-radius: 4px;
+    background-color: #fff;
+    width: 70%;
+    margin: 30px auto;
+    padding: 10px;
+}
+.modalHeader{
+    border-bottom: 1px solid #eec;
+}
+.modalBody{
+    font-family: calibri !important;
+    padding: 10px 0;
+}
+.modalFooter{
+    border-top: 1px solid #eec;
+    padding: 8px 0;
 }
