--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -21,38 +21,41 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 col-sm-12">
                     <div class="card card-body">
-                        <form action="" method="post">
-                            <div class="form-row">
-                                <div class="col-md-6 form-group">
-                                    <label for="username">Username</label>
-                                    <input type="text" name="username" id="username" value="" placeholder="Username"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <label for="fullname">fullname</label>
-                                    <input type="text" name="fullname" id="fullname" value="" placeholder="fullname"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-12 form-group">
-                                    <label for="email">Email</label>
-                                    <input type="email" name="email" id="email" value="" placeholder="email"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <label for="pass">Password</label>
-                                    <input type="password" name="password" id="pass" value="" placeholder="Password"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <label for="pass2">Confirm Password</label>
-                                    <input type="password" name="password2" id="pass2" value="" placeholder="Password"
-                                        class="form-control">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <button type="button" class="btn btn-sm btn-warning">Update</button>
-                            </div>
-                        </form>
+                        <% cb.forEach((user)=>{%>
+                            <%= user.username %>
+                        <% })%>
+                                <form action="" method="post">
+                                    <div class="form-row">
+                                        <div class="col-md-6 form-group">
+                                            <label for="username">Username</label>
+                                            <input type="text" name="username" id="username" value=""
+                                                placeholder="Username" class="form-control">
+                                        </div>
+                                        <div class="col-md-6 form-group">
+                                            <label for="fullname">fullname</label>
+                                            <input type="text" name="fullname" id="fullname" value=""
+                                                placeholder="fullname" class="form-control">
+                                        </div>
+                                        <div class="col-md-12 form-group">
+                                            <label for="email">Email</label>
+                                            <input type="email" name="email" id="email" value="" placeholder="email"
+                                                class="form-control">
+                                        </div>
+                                        <div class="col-md-6 form-group">
+                                            <label for="pass">Password</label>
+                                            <input type="password" name="password" id="pass" value=""
+                                                placeholder="Password" class="form-control">
+                                        </div>
+                                        <div class="col-md-6 form-group">
+                                            <label for="pass2">Confirm Password</label>
+                                            <input type="password" name="password2" id="pass2" value=""
+                                                placeholder="Password" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <button type="button" class="btn btn-sm btn-warning">Update</button>
+                                    </div>
+                                </form>
                     </div>
                 </div>
             </div>
