--- a/views/users.ejs
+++ b/views/users.ejs
@@ -11,17 +11,18 @@
 </head>
 
 <body>
-    <div>
-        <ul>
-        <% users.forEach((user)=> {%>
-            <li>
-                <span><%= user.username %></span>
-                <span>
-                    <a href="/get/<%= user._id %>">View</a>
-                </span>
-            </li>
-        <%})%>
-        </ul>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <div class="list-group my-3">
+                    <% users.forEach((user)=> {%>
+                        <a class="list-group-item" href="/get/<%= user._id %>">
+                            <%= user.username %>
+                        </a>
+                        <%})%>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
