--- a/views/users.ejs
+++ b/views/users.ejs
@@ -22,8 +22,57 @@
                         <%})%>
                 </div>
             </div>
+            <div class="col-md-6">
+                <h3>Get data using APIs</h3>
+                <div id="result"></div>
+            </div>
         </div>
     </div>
 </body>
+<script>
+    Fetch()
+
+    var output = ''
+    async function Fetch() {
+        await fetch('http://localhost:7000/fetch')
+            .then(res => {
+                res.json().then(data => {
+                    // console.log(data)
+                    if (data.length > 0) {
+                        output += `
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <form>
+                                        <input type="text" class="form-control" name="search" id="search" placeholder="Search..."/>
+                                    </form>
+                                </div>
+                            `
+
+                        data.forEach(item => {
+                            output += `
+                            <div class="col-md-6 p-1">
+                                <div class="card card-body">
+                                    <p>Username: ${item.username}</p>
+                                    <p>Fullname: ${item.username}</p>
+                                </div>
+                            </div>
+                            `
+                        })
+                        output += '</div>'
+                    } else {
+                        output = `<div class="card card-body">
+                                <div class="alert alert-danger">
+                                    <p>There is no data registered</p>
+                                </div>
+                            </div>`
+                    }
+                    document.getElementById('result').innerHTML = output
+                })
+            })
+            .catch(e => console.log(e))
+
+        // return console.log('Cool')
+    }
+</script>
 
 </html>
